--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BEACON Tracker</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Leaflet CSS for maps -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
-    <!-- Leaflet JS for maps -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <style>
         body {
@@ -237,8 +235,7 @@
             <div class="beacon-wave" style="width: 150px; height: 150px;"></div>
         </div>
 
-        <div id="mapid"></div> <!-- Map will be rendered here -->
-        <p id="locationDetails">Location: N/A</p>
+        <div id="mapid"></div> <p id="locationDetails">Location: N/A</p>
 
         <div id="pingStatusDisplay">
             <p id="targetInfo">Monitoring: <span id="monitoredDevice">Loading...</span></p>
